I made some changes

--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -3,12 +3,7 @@
 
 
 
-
-
-Hello blog
-
-
-<h2>roka has written {{ blogs.count }} blog{{ blogs.count|pluralize}}</h2>
+<h2>it was written {{ blogs.count }} blog{{ blogs.count|pluralize}}</h2>
 
 
 {% for blog in blogs %}
