--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -2,25 +2,20 @@
 {% block content %}
 
 
-<h1>rokia protfolio</h1>
 
 {% load static %}
 
-<a href="{% url 'blog:all_blogs' %}">Blog</a>
-<br>
+<center><img src="{% static 'portfolio/rr.jpg' %}" width="200px" height="100px" ></center>
 
-<a href="{% static 'portfolio/resume.pdf' %}">Resume </a>
-<br>
-
-<img src="{% static 'portfolio/rr.jpg' %}" width="200px" height="100px">
+<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
 
 {% for project in projects %}
 
-<h1>{{ project.title }}</h1>
-<p>{{ project.description }}</p>
+<h3>{{ project.title }}</h3>
 <img src="{{ project.image.url }}" width="200px" height="100px">
+{{ project.description }}<br>
 {% if project.url %}
-<br>
+
 <a href="{{ projcet.url }}">Link </a>
 {% endif %}
 
