--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -7,7 +7,7 @@
 
 <center><img src="{% static 'portfolio/rr.jpg' %}" width="200px" height="100px" ></center>
 
-<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
+<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.hahhhhhhhhha</h1>
 
 {% for project in projects %}
 
